--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,12 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "swiper": "^6.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -43,6 +43,6 @@
     ]
   },
   "devDependencies": {
-    "reinstall-node-modules": "^2.0.0"
+    "reinstall-node-modules": "^1.2.0"
   }
 }
